# agent-matters

./: .fmmrc.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT.md  README.md  TLDR.md  justfile  release-please-config.json  tools.toml
crates/agent-matters-capabilities/: Cargo.toml
crates/agent-matters-capabilities/src/: doctor.rs  jit.rs  lib.rs
crates/agent-matters-capabilities/src/capabilities/: diff.rs  diff_tree.rs  list.rs  mod.rs  show.rs
crates/agent-matters-capabilities/src/catalog/: discovery.rs  index.rs  mod.rs  overlays.rs
crates/agent-matters-capabilities/src/catalog/index/: diagnostics.rs  fingerprint.rs  paths.rs  records.rs  types.rs
crates/agent-matters-capabilities/src/config/: loader.rs  mod.rs
crates/agent-matters-capabilities/src/config/loader/: tests.rs
crates/agent-matters-capabilities/src/doctor/: runtime.rs  semantic.rs
crates/agent-matters-capabilities/src/doctor/runtime/: generated_state.rs
crates/agent-matters-capabilities/src/doctor/semantic/: capabilities.rs  diagnostics.rs  env.rs  imports.rs  profiles.rs
crates/agent-matters-capabilities/src/jit/: matching.rs  session_cache.rs
crates/agent-matters-capabilities/src/profiles/: adapter.rs  adapter_capabilities.rs  build_plan.rs  build_writer.rs  claude_adapter.rs  codex_adapter.rs  compile.rs  credential_symlinks.rs  instructions.rs  list.rs  mod.rs  requirements.rs  resolve.rs  runtime.rs  scope.rs  scope_git.rs  show.rs  use_profile.rs
crates/agent-matters-capabilities/src/profiles/build_plan/: diagnostics.rs  fingerprint.rs  inputs.rs  runtime_selection.rs  types.rs
crates/agent-matters-capabilities/src/profiles/build_writer/: diagnostics.rs  existing.rs  immutable.rs  paths.rs  runtime_pointer.rs
crates/agent-matters-capabilities/src/profiles/claude_adapter/: renderer.rs
crates/agent-matters-capabilities/src/profiles/codex_adapter/: renderer.rs
crates/agent-matters-capabilities/src/sources/: contract.rs  import.rs  mcp_registry_spec.rs  mod.rs  runtime_import.rs  search.rs  skills_sh.rs  skills_sh_parse.rs  storage.rs
crates/agent-matters-capabilities/src/sources/runtime_import/: inspect.rs  sanitize.rs  write.rs
crates/agent-matters-capabilities/src/sources/storage/: error.rs  fs.rs  partial.rs  paths.rs  provenance.rs  publish.rs  staging.rs
crates/agent-matters-capabilities/tests/: capability_diff.rs  capability_show.rs  catalog_discovery.rs  catalog_index.rs  config_fixtures.rs  doctor.rs  doctor_runtime.rs  jit_resolution.rs  manifest_fixtures.rs  profile_build_plan.rs  profile_claude_adapter.rs  profile_compile.rs  profile_instructions.rs  profile_requirements.rs  profile_resolution.rs  profile_runtime_resolution.rs  profile_scope.rs  profile_show.rs  profile_use.rs  runtime_import.rs  source_import_recovery.rs  sources.rs  sources_skills_sh.rs
crates/agent-matters-capabilities/tests/doctor/: catalog.rs  common.rs  generated_index.rs  result_shape.rs  runtime.rs  semantic.rs
crates/agent-matters-capabilities/tests/fixtures/: README.md
crates/agent-matters-capabilities/tests/fixtures/homes/user-with-codex-default/.agent-matters/: config.toml
crates/agent-matters-capabilities/tests/fixtures/imports/: README.md
crates/agent-matters-capabilities/tests/fixtures/manifests/: README.md
crates/agent-matters-capabilities/tests/fixtures/manifests/capabilities/mcp-linear/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/capabilities/missing-files/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/capabilities/runtime-missing-supported/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/capabilities/slashful-runtime/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/github-researcher/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/missing-id/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/runtime-missing-enabled/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/runtimes-default-table/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/slashful-id/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/manifests/profiles/slashful-runtime/: manifest.toml
crates/agent-matters-capabilities/tests/fixtures/overlays/: README.md
crates/agent-matters-capabilities/tests/fixtures/repos/repo-with-defaults/defaults/: markers.toml  runtimes.toml
crates/agent-matters-capabilities/tests/fixtures/runtime-homes/: README.md
crates/agent-matters-capabilities/tests/profile_build_plan/: common.rs  diagnostics.rs  fingerprint.rs  json_shape.rs  runtime.rs
crates/agent-matters-capabilities/tests/profile_compile/: build_cache.rs  common.rs  credentials.rs  output.rs  requirements.rs  runtime_home.rs
crates/agent-matters-capabilities/tests/support/: fixtures.rs  manifests.rs  mod.rs  native_home.rs
crates/agent-matters-cli/: Cargo.toml  build.rs
crates/agent-matters-cli/src/: cli.rs  lib.rs  main.rs
crates/agent-matters-cli/src/cli/: capabilities.rs  doctor.rs  generated_help.rs  help_text.rs  profile_render.rs  profiles.rs  runtime_import.rs  sources.rs
crates/agent-matters-cli/tests/: commands.rs  help.rs  profiles_compile.rs  profiles_use.rs
crates/agent-matters-cli/tests/commands/: capabilities.rs  common.rs  completions.rs  doctor.rs  help.rs  profiles.rs  runtime_import.rs  sources.rs
crates/agent-matters-cli/tests/support/: mod.rs
crates/agent-matters-core/: Cargo.toml
crates/agent-matters-core/src/: lib.rs
crates/agent-matters-core/src/catalog/: index.rs  mod.rs  paths.rs
crates/agent-matters-core/src/config/: mod.rs  paths.rs  schemas.rs
crates/agent-matters-core/src/domain/: capability.rs  diagnostic.rs  id.rs  mod.rs  profile.rs  provenance.rs  requirement.rs  runtime.rs  scope.rs
crates/agent-matters-core/src/manifest/: capability.rs  mod.rs  profile.rs
crates/agent-matters-core/src/runtime/: adapter.rs  build.rs  fingerprint.rs  mod.rs
(+27 files in other folders)
