[workspace]
resolver = "3"
members = [
    "crates/agent-matters-core",
    "crates/agent-matters-capabilities",
    "crates/agent-matters-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/agent-matters"
rust-version = "1.85"

[workspace.dependencies]
agent-matters-capabilities = { path = "crates/agent-matters-capabilities" }
agent-matters-cli = { path = "crates/agent-matters-cli" }
agent-matters-core = { path = "crates/agent-matters-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Testing
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
