[workspace]
resolver = "3"
members = [
    "crates/agent-matters-core",
    "crates/agent-matters-capabilities",
    "crates/agent-matters-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/agent-matters"
rust-version = "1.95"

[workspace.dependencies]
agent-matters-capabilities = { path = "crates/agent-matters-capabilities" }
agent-matters-cli = { path = "crates/agent-matters-cli" }
agent-matters-core = { path = "crates/agent-matters-core" }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Build tooling (tools.toml driven CLI help generator)
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"

# Testing
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
