[workspace]
resolver = "3"
members = [
    "crates/agent-matters-core",
    "crates/agent-matters-capabilities",
    "crates/agent-matters-cli",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/srobinson/agent-matters"
rust-version = "1.95"

[workspace.dependencies]
agent-matters-capabilities = { path = "crates/agent-matters-capabilities" }
agent-matters-cli = { path = "crates/agent-matters-cli" }
agent-matters-core = { path = "crates/agent-matters-core" }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Build tooling (tools.toml driven CLI help generator)
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

# The profile that 'dist' will build with. cargo-dist invokes
# `cargo build --profile dist`; without this block the build fails
# with "profile `dist` is not defined".
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
github-attestations = true
# release-please creates the GitHub Release; cargo-dist only uploads into it.
create-release = false
unix-archive = ".tar.gz"
windows-archive = ".zip"
include = ["LICENSE", "README.md"]
auto-includes = false
pr-run-mode = "skip"
# release.yml appends a publish-npm job that cargo-dist does not know about;
# allow dist generate --check to tolerate that drift.
allow-dirty = ["ci"]
